bk_ida/gccida/g1/expand_builtin_longjmp
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_longjmp/src/builtins.c:1103:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_longjmp/src/builtins.c:1138:19: error: use of undeclared identifier 'machine_mode'
v5 = force_reg( ( machine_mode)v4, buf_addr); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_longjmp/src/builtins.c:1142:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v5); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_longjmp/src/builtins.c:1144:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_longjmp/src/builtins.c:1165:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
last_insn = ( rtx)last_insn[1]; 
                  ^~~~~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_longjmp/src/obj/builtins.o] Error 1
